--- a/src/main/resources/templates/Tour/list.html
+++ b/src/main/resources/templates/Tour/list.html
@@ -161,6 +161,9 @@ body {
                     <p class="tour-title" th:text="${tour.title}"></p>
                     <p class="tour-date" th:text="${tour.departure}"></p>
                     <p class="tour-description" th:text="${tour.description}"></p>
+                    <p class="tour-title" th:text="${tour.isActivated}"></p>
+                    <p class="tour-title" th:text="${tour.createdAt}"></p>
+                    <p class="tour-title" th:text="${tour.modifiedAt}"></p>
                     <a href="#" class="btn-read-more">Xem thêm</a>
                 </div>
             </div>
